--- a/index.html
+++ b/index.html
@@ -1,12 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <title>OscarDev</title>
 </head>
+
 <body>
-    
+
+    <nav>
+        <div class="nav-container">
+            <a href="#proyectos">Proyectos</a>
+            <a href="#sobremi">Sobre mi</a>
+            <a href="#contacto">Contacto</a>
+        </div>
+
+    </nav>
+
+    <main>
+        <h2 class="separador">Proyectos</h2>
+        <section>
+            <div class="container">
+                <div class="card">
+
+                    <div class="top-row background-top-row">
+                        <h4>Aaktun</h4>
+                        <figcaption id="img-aktun">
+                            <img src="./img/logo_aktum.jpg" alt="imagen publicitaria de Aktum">
+                        </figcaption>
+                    </div>
+
+                    <div class="content">
+                        <h2>Aaktun</h2>
+                        <p>Un nuevo competidor en el area restaurantera buscaba ganar alcance en la ciudad así que se desarrolló una pagina para publicitarla y ganase clientes por medio de este medio</p>
+
+
+                    </div>
+                    <div class="button-content">
+
+                        <a href="" class=" button background-top-row ">Visitar</a>
+                    </div>
+                </div>
+
+
+                <div class="card">
+
+                    <div class="top-row background-top-row">
+                        <h4>Mariachi Regional Zapotiltic
+
+                        </h4>
+                        <figcaption id="img-aktun">
+                            <img src="./img/logo-mariachi.jpg" alt="imagen publicitaria de Aktum">
+                        </figcaption>
+                    </div>
+
+                    <div class="content">
+                        <h2>Mariachi Regional Zapotiltic</h2>
+                        <p>Un nuevo competidor en el area restaurantera buscaba ganar alcance en la ciudad así que se desarrolló una pagina para publicitarla y ganase clientes por medio de este medio</p>
+
+
+                    </div>
+                    <div class="button-content">
+
+                        <a href="" class=" button background-top-row ">Visitar</a>
+                    </div>
+                </div>
+
+
+                <div class="card">
+
+                    <div class="top-row background-top-row">
+                        <h4>SuperCakes
+
+                        </h4>
+                        <figcaption id="img-aktun">
+                            <img src="./img/logo-pasteleria.jpg" alt="imagen publicitaria de Aktum">
+                        </figcaption>
+                    </div>
+
+                    <div class="content">
+                        <h2>SuperCakes</h2>
+                        <p>Se realizo el ejemplo de maquetacion de una pasteleria</p>
+
+
+                    </div>
+
+                    <div class="button-content">
+
+                        <a href="" class=" button background-top-row ">Visitar</a>
+                    </div>
+                </div>
+
+
+                <div class="card">
+
+                    <div class="top-row background-top-row">
+                        <h4>Clon Vaccination page
+
+                        </h4>
+                        <figcaption id="img-aktun">
+                            <img src="./img/logo-vaccination.png" alt="imagen publicitaria de Aktum">
+                        </figcaption>
+                    </div>
+
+                    <div class="content">
+                        <h2>Vaccination Page</h2>
+                        <p>Se realizo el ejemplo de un "clon" de una pagina campaña para vacunación de personas</p>
+
+
+                    </div>
+                    <div class="button-content">
+
+                        <a href="" class=" button background-top-row ">Visitar</a>
+                    </div>
+                </div>
+
+
+                <div class="card">
+
+                    <div class="top-row background-top-row">
+                        <h4>Clon pokedex js</h4>
+
+                        </h4>
+                        <figcaption id="img-aktun">
+                            <img src="./img/logo-pokedex.png" alt="imagen publicitaria de Aktum">
+                        </figcaption>
+                    </div>
+
+                    <div class="content">
+                        <h2>Pokedex</h2>
+                        <p>Ejemplo de un pokedex utilizando js</p>
+
+
+                    </div>
+                    <div class="button-content">
+
+                        <a href="" class=" button background-top-row ">Visitar</a>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </section>
+
+        <section>
+            <h2 class="separador">Practicas</h2>
+        </section>
+
+    </main>
+
 </body>
+
 </html>
