new face of my portfolio
mixup pages

--- a/contacto.html
+++ b/contacto.html
@@ -23,20 +23,20 @@
             <div class="menu" id="show-menu">
                 <nav>
                     <ul>
-                        <li class="menu-selected "><a href="#"><i class=" fas fa-home"></i>Inicio</a></li>
+                        <li><a href="./index.html"><i class=" fas fa-home"></i>Inicio</a></li>
                         <li><a href="./proyectos.html"><i class=" fab fa-youtube"></i>Proyectos</a></li>
                         <li><a href="./certificaciones.html"><i class=" fab fa-youtube"></i>Certificaciones</a></li>
                         <!-- text-selected-no funciona -->
                         <li><a href="./blog.html" class="text-menu-selected"><i class=" fas fa-file-alt"></i>Blog Personal</a></li>
-                        <li><a href="./contacto.html"><i class=" fas fa-headset"></i>Contácto</a></li>
+                        <li class="menu-selected "><a href="./contacto.html"><i class=" fas fa-headset"></i>Contácto</a></li>
 
                     </ul>
                 </nav>
             </div>
 
-            <!-- <div id="ctn-icon-search">
+            <div id="ctn-icon-search">
                 <i class="fas fa-search" id="icon-search"></i>
-            </div> -->
+            </div>
         </div>
 
         <div id="icon-menu">
@@ -66,17 +66,32 @@
 
         <!-- portada -->
         <div class="blog-container-cover">
-            <div class="container-cover-info indexaux">
-
-                <h1>Mi nombre es Oscar</h1>
-
+            <div class="container-cover-info">
+                <p class="bigText">:)</p>
 
             </div>
 
         </div>
 
+        <div class="cont-contacto2">
+            <h2>Contáctame</h2>
+
+            <div class="container-footer aux-redes">
 
 
+                <div class="redes-footer ">
+                    <a href="#"><i class="fab fa-facebook-f icon-redes-footer"></i></a>
+                    <a href="#"><i class="fab fa-instagram icon-redes-footer"></i></a>
+                    <a href="#"><i class="fab fa-linkedin icon-redes-footer"></i></a>
+                </div>
+
+
+
+            </div>
+
+
+
+        </div>
 
         <!-- Boton volver hacia arriba -->
         <div id="button-up">
@@ -89,11 +104,11 @@
                 <div class="logo-footer">
                     <img src="./img/logo.png" alt="">
                 </div>
-                <div class="redes-footer">
+                <!-- <div class="redes-footer">
                     <a href="#"><i class="fab fa-facebook-f icon-redes-footer"></i></a>
                     <a href="#"><i class="fab fa-instagram icon-redes-footer"></i></a>
                     <a href="#"><i class="fab fa-linkedin icon-redes-footer"></i></a>
-                </div>
+                </div> -->
 
                 <hr>
                 <h4> Todos los derechos reservados</h4>
