--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ a client in the banking industry</p>
                 <div class="faq-question">
                     <input id="q4" type="checkbox" class="panel">
                     <div class="plus">+</div>
-                    <label for="q4" class="panel-title parrafog">Front-end developer @Softtek</label>
+                    <label for="q4" class="panel-title parrafog">Front-end Developer @Softtek</label>
                     <div class="panel-content">
                         <a href="#menu2"></a>
                         <h3 class="date">November 2022</h3>
