--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
 
                 <div class="col-12 col-sm-6 col-md-6 subclase ">
                     <p>
-                        Hello, my name is Oscar and I'm passionate about technology in general. I love software development because it allows me to create things from scratch, from something that increases sales for a business to solving a common problem. Currently, I'm a student
-                        about to graduate in computer systems engineering. However, since my second semester, I joined a university startup, and although the company couldn't overcome the local market, I'm very grateful because it allowed me to work with
-                        real clients and as part of a team alongside people who knew more than me.
+                        Hello, my name is Oscar, and I'm passionate about technology. Here are some certifications and projects I have worked on. BTW I am still updating somethings 👀"
                     </p>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6">
